tests/ui/foreign-fn-return-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/foreign-fn-return-lifetime.rs:3:19
   |
LL |     pub fn f() -> &u8;
   |                   ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
LL |     pub fn f() -> &'static u8;
   |                    +++++++
help: instead, you are more likely to want to return an owned value
   |
LL -     pub fn f() -> &u8;
LL +     pub fn f() -> u8;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
